[gd_scene load_steps=10 format=3 uid="uid://bpsba6s4m7l5v"]

[ext_resource type="Script" path="res://Scripts/Personagens/Sora/SoraAttackBasic.gd" id="1_r8gef"]
[ext_resource type="Texture2D" uid="uid://gknj7sfbw3h8" path="res://Resources/Sprites/Personagens/Sora/Attack/Basic/spr_SoraSlashU1.png" id="2_00gxl"]
[ext_resource type="Texture2D" uid="uid://bugmgbi3bljct" path="res://Resources/Sprites/Personagens/Sora/Attack/Basic/spr_SoraSlashU2.png" id="3_q15jg"]
[ext_resource type="Texture2D" uid="uid://c0i5v24euii8l" path="res://Resources/Sprites/Personagens/Sora/Attack/Basic/spr_SoraSlashU3.png" id="4_7cs2u"]
[ext_resource type="Texture2D" uid="uid://d174qum6gyg3v" path="res://Resources/Sprites/Personagens/Sora/Attack/Basic/spr_SoraSlashU4.png" id="5_tm6vd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jsi2p"]
size = Vector2(259, 136)

[sub_resource type="SpriteFrames" id="SpriteFrames_hu5pu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_00gxl")
}],
"loop": false,
"name": &"default",
"speed": 16.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_5p074"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_q15jg")
}],
"loop": false,
"name": &"default",
"speed": 16.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_llday"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_7cs2u")
}, {
"duration": 1.0,
"texture": ExtResource("5_tm6vd")
}],
"loop": false,
"name": &"default",
"speed": 16.0
}]

[node name="SoraAttackBasic" type="Area2D"]
collision_mask = 2
script = ExtResource("1_r8gef")

[node name="colisor" type="CollisionShape2D" parent="."]
position = Vector2(53.5, -1)
shape = SubResource("RectangleShape2D_jsi2p")

[node name="spritePart1" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, 40)
scale = Vector2(2, 2.5)
sprite_frames = SubResource("SpriteFrames_hu5pu")
frame_progress = 1.0

[node name="spritePart2" type="AnimatedSprite2D" parent="."]
position = Vector2(55, -4)
scale = Vector2(2, 2.5)
sprite_frames = SubResource("SpriteFrames_5p074")
frame_progress = 1.0

[node name="spritePart3" type="AnimatedSprite2D" parent="."]
position = Vector2(49, -53)
scale = Vector2(2, 2.5)
sprite_frames = SubResource("SpriteFrames_llday")
frame_progress = 1.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="spritePart1" to="." method="_on_sprite_part_1_animation_finished"]
[connection signal="animation_finished" from="spritePart2" to="." method="_on_sprite_part_2_animation_finished"]
[connection signal="animation_finished" from="spritePart3" to="." method="_on_sprite_part_3_animation_finished"]
